--- a/app/src/main/res/layout/fragment_property_search_filter_dialog.xml
+++ b/app/src/main/res/layout/fragment_property_search_filter_dialog.xml
@@ -25,6 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@color/white"
+            android:elevation="20dp"
             android:theme="@style/AppTheme.NoActionBar">
 
             <TextView
@@ -40,7 +41,7 @@
 
         <androidx.core.widget.NestedScrollView
             android:id="@+id/list"
-            android:layout_height="600dp"
+            android:layout_height="500dp"
             android:layout_width="match_parent"
             android:layout_marginBottom="50dp"
             android:fitsSystemWindows="true"
