--- a/app/src/main/res/layout/fragment_property_search_filter_dialog.xml
+++ b/app/src/main/res/layout/fragment_property_search_filter_dialog.xml
@@ -86,7 +86,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
-                    android:onClick="@{()->fragment.setExpandableListener(baseCardview, arrowButton  )}"
+                    android:onClick="@{()->fragment.setExpandableListener(typeChipGroup, arrowButton  )}"
                     app:layout_constraintBottom_toBottomOf="@id/typeFilter"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.802"
@@ -95,46 +95,28 @@
                     app:layout_constraintVertical_bias="0.0"
                     app:srcCompat="@drawable/ic_baseline_keyboard_arrow_up_24" />
 
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/base_cardview"
-                    style="@style/Base.CardView"
-                    android:layout_width="match_parent"
+
+                <com.google.android.material.chip.ChipGroup
+                    android:id="@+id/typeChipGroup"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.473"
+                    android:checked="true"
+                    app:chipSpacingHorizontal="22dp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.021">
+                    app:layout_constraintBottom_toTopOf="@id/nearByFilter"
+                    app:layout_constraintTop_toBottomOf="@id/typeFilter">
 
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:id="@+id/typeHidden"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:paddingTop="@dimen/marginTop"
-                        app:behavior_hideable="false">
+                    <com.google.android.material.chip.Chip
+                        android:id="@+id/house"
+                        style="@style/Widget.MaterialComponents.Chip.Filter"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:checked="@={viewModel.house}"
+                        android:onClick="@{(v)->viewModel.filterData()}"
+                        android:text="@string/house" />
 
-                        <com.google.android.material.chip.ChipGroup
-                            android:id="@+id/typeChipGroup"
-                            style="@style/Widget.MaterialComponents.Chip.Choice"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:checked="true"
-                            app:chipSpacingHorizontal="22dp"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent">
-
-                            <com.google.android.material.chip.Chip
-                                android:id="@+id/house"
-                                style="@style/Widget.MaterialComponents.Chip.Filter"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:checked="@={viewModel.house}"
-                                android:onClick="@{(v)->viewModel.filterData()}"
-                                android:text="@string/house" />
-
-                            <com.google.android.material.chip.Chip
+                    <com.google.android.material.chip.Chip
                                 android:id="@+id/flat"
                                 style="@style/Widget.MaterialComponents.Chip.Filter"
                                 android:layout_width="wrap_content"
@@ -179,26 +161,25 @@
                                 android:onClick="@{(v)->viewModel.filterData()}"
                                 android:text="@string/manor" />
                         </com.google.android.material.chip.ChipGroup>
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-                </androidx.cardview.widget.CardView>
+
 
                 <TextView
                     android:id="@+id/nearByFilter"
                     style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                     android:layout_width="0dp"
+                    android:layout_marginTop="16dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/marginTop"
                     android:text="@string/nearby"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/base_cardview" />
+                    app:layout_constraintTop_toBottomOf="@id/typeChipGroup" />
 
                 <ImageButton
                     android:id="@+id/arrowButton2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
-                    android:onClick="@{()->fragment.setExpandableListener(baseCardview2, arrowButton2  )}"
+                    android:onClick="@{()->fragment.setExpandableListener(nearbyChipGroup, arrowButton2  )}"
                     app:layout_constraintBottom_toBottomOf="@id/nearByFilter"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.802"
@@ -207,18 +188,6 @@
                     app:layout_constraintVertical_bias="0.0"
                     app:srcCompat="@drawable/ic_baseline_keyboard_arrow_up_24" />
 
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/base_cardview2"
-                    style="@style/Base.CardView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.473"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/nearByFilter"
-                    app:layout_constraintVertical_bias="0.021">
 
                     <com.google.android.material.chip.ChipGroup
                         android:id="@+id/nearbyChipGroup"
@@ -284,7 +253,6 @@
                             android:onClick="@{()->viewModel.filterData()}"
                             android:text="@string/park" />
                     </com.google.android.material.chip.ChipGroup>
-                </androidx.cardview.widget.CardView>
 
                 <TextView
                     android:id="@+id/areaText"
@@ -295,7 +263,7 @@
                     android:text="@string/nearby"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/base_cardview2" />
+                    app:layout_constraintTop_toBottomOf="@id/nearbyChipGroup" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/areaTex"
