--- a/app/src/main/res/layout/fragment_property_search_filter_dialog.xml
+++ b/app/src/main/res/layout/fragment_property_search_filter_dialog.xml
@@ -86,7 +86,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
-                    android:onClick="@{()->fragment.setExpandableListener(typeChipGroup, arrowButton  )}"
+                    android:onClick="@{()->fragment.setExpandableListener(baseCardview, arrowButton  )}"
                     app:layout_constraintBottom_toBottomOf="@id/typeFilter"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.802"
@@ -95,73 +95,86 @@
                     app:layout_constraintVertical_bias="0.0"
                     app:srcCompat="@drawable/ic_baseline_keyboard_arrow_up_24" />
 
-
-                <com.google.android.material.chip.ChipGroup
-                    android:id="@+id/typeChipGroup"
-                    style="@style/Widget.MaterialComponents.Chip.Choice"
-                    android:layout_width="wrap_content"
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/base_cardview"
+                    style="@style/Base.CardView"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:checked="true"
-                    app:chipSpacingHorizontal="22dp"
+                    android:layout_margin="10dp"
+                    android:layout_marginTop="@dimen/marginTop"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.473"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintBottom_toTopOf="@id/nearByFilter"
-                    app:layout_constraintTop_toBottomOf="@id/typeFilter">
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.021">
 
-                    <com.google.android.material.chip.Chip
-                        android:id="@+id/house"
-                        style="@style/Widget.MaterialComponents.Chip.Filter"
+
+                    <com.google.android.material.chip.ChipGroup
+                        android:id="@+id/typeChipGroup"
+                        style="@style/Widget.MaterialComponents.Chip.Choice"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:checked="@={viewModel.house}"
-                        android:onClick="@{(v)->viewModel.filterData()}"
-                        android:text="@string/house" />
+                        android:checked="true"
+                        app:chipSpacingHorizontal="22dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
 
-                    <com.google.android.material.chip.Chip
-                                android:id="@+id/flat"
-                                style="@style/Widget.MaterialComponents.Chip.Filter"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:checked="@={viewModel.flat}"
-                                android:onClick="@{(v)->viewModel.filterData()}"
-                                android:text="@string/flat" />
+                        <com.google.android.material.chip.Chip
+                            android:id="@+id/house"
+                            style="@style/Widget.MaterialComponents.Chip.Filter"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:checked="@={viewModel.house}"
+                            android:onClick="@{(v)->viewModel.filterData()}"
+                            android:text="@string/house" />
 
-                            <com.google.android.material.chip.Chip
-                                android:id="@+id/duplex"
-                                style="@style/Widget.MaterialComponents.Chip.Filter"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:checked="@={viewModel.duplex}"
-                                android:onClick="@{(v)->viewModel.filterData()}"
-                                android:text="@string/duplex" />
+                        <com.google.android.material.chip.Chip
+                            android:id="@+id/flat"
+                            style="@style/Widget.MaterialComponents.Chip.Filter"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:checked="@={viewModel.flat}"
+                            android:onClick="@{(v)->viewModel.filterData()}"
+                            android:text="@string/flat" />
 
-                            <com.google.android.material.chip.Chip
-                                android:id="@+id/penthouse"
-                                style="@style/Widget.MaterialComponents.Chip.Filter"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:checked="@={viewModel.penthouse}"
-                                android:onClick="@{(v)->viewModel.filterData()}"
-                                android:text="@string/penthouse" />
+                        <com.google.android.material.chip.Chip
+                            android:id="@+id/duplex"
+                            style="@style/Widget.MaterialComponents.Chip.Filter"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:checked="@={viewModel.duplex}"
+                            android:onClick="@{(v)->viewModel.filterData()}"
+                            android:text="@string/duplex" />
 
-                            <com.google.android.material.chip.Chip
-                                android:id="@+id/loft"
-                                style="@style/Widget.MaterialComponents.Chip.Filter"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:checked="@={viewModel.loft}"
-                                android:onClick="@{(v)->viewModel.filterData()}"
-                                android:text="@string/loft" />
+                        <com.google.android.material.chip.Chip
+                            android:id="@+id/penthouse"
+                            style="@style/Widget.MaterialComponents.Chip.Filter"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:checked="@={viewModel.penthouse}"
+                            android:onClick="@{(v)->viewModel.filterData()}"
+                            android:text="@string/penthouse" />
 
-                            <com.google.android.material.chip.Chip
-                                android:id="@+id/manor"
-                                style="@style/Widget.MaterialComponents.Chip.Filter"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:checked="@={viewModel.manor}"
-                                android:onClick="@{(v)->viewModel.filterData()}"
-                                android:text="@string/manor" />
-                        </com.google.android.material.chip.ChipGroup>
+                        <com.google.android.material.chip.Chip
+                            android:id="@+id/loft"
+                            style="@style/Widget.MaterialComponents.Chip.Filter"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:checked="@={viewModel.loft}"
+                            android:onClick="@{(v)->viewModel.filterData()}"
+                            android:text="@string/loft" />
 
+                        <com.google.android.material.chip.Chip
+                            android:id="@+id/manor"
+                            style="@style/Widget.MaterialComponents.Chip.Filter"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:checked="@={viewModel.manor}"
+                            android:onClick="@{(v)->viewModel.filterData()}"
+                            android:text="@string/manor" />
+                    </com.google.android.material.chip.ChipGroup>
+                </androidx.cardview.widget.CardView>
 
                 <TextView
                     android:id="@+id/nearByFilter"
@@ -172,14 +185,14 @@
                     android:text="@string/nearby"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/typeChipGroup" />
+                    app:layout_constraintTop_toBottomOf="@id/base_cardview" />
 
                 <ImageButton
                     android:id="@+id/arrowButton2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
-                    android:onClick="@{()->fragment.setExpandableListener(nearbyChipGroup, arrowButton2  )}"
+                    android:onClick="@{()->fragment.setExpandableListener(baseCardview2, arrowButton2  )}"
                     app:layout_constraintBottom_toBottomOf="@id/nearByFilter"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.802"
@@ -188,6 +201,18 @@
                     app:layout_constraintVertical_bias="0.0"
                     app:srcCompat="@drawable/ic_baseline_keyboard_arrow_up_24" />
 
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/base_cardview2"
+                    style="@style/Base.CardView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.473"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/nearByFilter"
+                    app:layout_constraintVertical_bias="0.021">
 
                     <com.google.android.material.chip.ChipGroup
                         android:id="@+id/nearbyChipGroup"
@@ -253,6 +278,7 @@
                             android:onClick="@{()->viewModel.filterData()}"
                             android:text="@string/park" />
                     </com.google.android.material.chip.ChipGroup>
+                </androidx.cardview.widget.CardView>
 
                 <TextView
                     android:id="@+id/areaText"
@@ -263,7 +289,7 @@
                     android:text="@string/nearby"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/nearbyChipGroup" />
+                    app:layout_constraintTop_toBottomOf="@id/base_cardview2" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/areaTex"
@@ -295,16 +321,45 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/areaTex" />
 
-                <com.google.android.material.slider.RangeSlider
-                    android:id="@+id/priceRangeSlider"
+                <ImageButton
+                    android:id="@+id/arrowButtonPrice"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:stepSize="100000"
-                    android:valueFrom="@{viewModel.minPrice}"
-                    android:valueTo="@{viewModel.maxPrice}"
+                    android:background="@color/white"
+                    android:onClick="@{()->fragment.setExpandableListener(baseCardViewPrice, arrowButton2  )}"
+                    app:layout_constraintBottom_toBottomOf="@id/nearByFilter"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.802"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/nearByFilter"
+                    app:layout_constraintVertical_bias="0.0"
+                    app:srcCompat="@drawable/ic_baseline_keyboard_arrow_up_24" />
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/baseCardViewPrice"
+                    style="@style/Base.CardView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_marginTop="@dimen/marginTop"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.473"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/priceRangeText"
-                    app:values="@{viewModel.priceArray}" />
+                    app:layout_constraintVertical_bias="0.021">
+
+                    <com.google.android.material.slider.RangeSlider
+                        android:id="@+id/priceRangeSlider"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:stepSize="100000"
+                        android:valueFrom="@{viewModel.minPrice}"
+                        android:valueTo="@{viewModel.maxPrice}"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/priceRangeText"
+                        app:values="@{viewModel.priceArray}" />
+                </androidx.cardview.widget.CardView>
 
                 <TextView
                     android:id="@+id/surfaceRangeText"
@@ -315,7 +370,7 @@
                     android:text="@string/surface"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/priceRangeSlider" />
+                    app:layout_constraintTop_toBottomOf="@id/baseCardViewPrice" />
 
                 <com.google.android.material.slider.RangeSlider
                     android:id="@+id/surfaceRangeSlider"
