--- a/app/src/main/res/layout/fragment_property_search_filter_dialog.xml
+++ b/app/src/main/res/layout/fragment_property_search_filter_dialog.xml
@@ -88,6 +88,10 @@
                     android:id="@+id/arrow_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/marginStart"
+                    android:paddingTop="@dimen/marginTop"
+                    android:paddingEnd="@dimen/marginEnd"
+                    android:paddingBottom="@dimen/marginTop"
                     android:background="@color/white"
                     android:onClick="@{()->fragment.setExpandableListener(baseCardview, arrowButton  )}"
                     app:layout_constraintBottom_toBottomOf="@id/typeFilter"
@@ -208,8 +212,11 @@
                     android:id="@+id/arrowButton2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingTop="@dimen/marginTop"
                     android:background="@color/white"
+                    android:paddingTop="@dimen/marginTop"
+                    android:paddingStart="@dimen/marginStart"
+                    android:paddingEnd="@dimen/marginEnd"
+                    android:paddingBottom="@dimen/marginTop"
                     android:onClick="@{()->fragment.setExpandableListener(baseCardview2, arrowButton2  )}"
                     app:layout_constraintBottom_toBottomOf="@id/nearByFilter"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -305,8 +312,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginTop="@dimen/marginTop"
-                    android:background="@android:color/darker_gray"
                     android:paddingBottom="@dimen/marginStart"
+                    android:background="@android:color/darker_gray"
                     app:layout_constraintBottom_toBottomOf="@id/base_cardview2"
                     app:layout_constraintStart_toStartOf="parent" />
 
@@ -329,7 +336,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
-                    android:paddingBottom="@dimen/marginStart"
+                    android:paddingStart="@dimen/marginStart"
+                    android:paddingTop="@dimen/marginTop"
+                    android:paddingEnd="@dimen/marginEnd"
+                    android:paddingBottom="@dimen/marginTop"
                     android:onClick="@{()->fragment.setExpandableListener(baseCardViewArea, arrowButtonArea )}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.802"
@@ -377,8 +387,8 @@
                     android:id="@+id/dividerPrice"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_marginTop="@dimen/marginTop"
                     android:background="@android:color/darker_gray"
+                    android:layout_marginTop="@dimen/marginTop"
                     android:paddingBottom="@dimen/marginStart"
                     app:layout_constraintBottom_toBottomOf="@id/baseCardViewArea"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -388,9 +398,10 @@
                     style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/marginTop"
                     android:paddingStart="@dimen/marginStart"
+                    android:paddingTop="@dimen/marginTop"
                     android:paddingEnd="@dimen/marginEnd"
+                    android:paddingBottom="@dimen/marginTop"
                     android:text="@string/price"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
@@ -401,8 +412,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
+                    android:paddingStart="@dimen/marginStart"
+                    android:paddingTop="@dimen/marginTop"
+                    android:paddingEnd="@dimen/marginEnd"
+                    android:paddingBottom="@dimen/marginTop"
                     android:onClick="@{()->fragment.setExpandableListener(baseCardViewPrice, arrowButtonPrice  )}"
-                    app:layout_constraintBottom_toBottomOf="@id/nearByFilter"
+                    app:layout_constraintBottom_toBottomOf="@id/priceRangeText"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.802"
                     app:layout_constraintStart_toStartOf="parent"
@@ -442,8 +457,8 @@
                     android:id="@+id/dividerSurface"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_marginTop="@dimen/marginTop"
                     android:background="@android:color/darker_gray"
+                    android:layout_marginTop="@dimen/marginTop"
                     android:paddingBottom="@dimen/marginStart"
                     app:layout_constraintBottom_toBottomOf="@id/baseCardViewPrice"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -453,9 +468,10 @@
                     style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/marginTop"
                     android:paddingStart="@dimen/marginStart"
+                    android:paddingTop="@dimen/marginTop"
                     android:paddingEnd="@dimen/marginEnd"
+                    android:paddingBottom="@dimen/marginTop"
                     android:text="@string/surface"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
@@ -466,6 +482,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
+                    android:paddingStart="@dimen/marginStart"
+                    android:paddingTop="@dimen/marginTop"
+                    android:paddingEnd="@dimen/marginEnd"
+                    android:paddingBottom="@dimen/marginTop"
                     android:onClick="@{()->fragment.setExpandableListener(baseCardViewSurface, arrowButtonSurface )}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.802"
@@ -502,8 +522,8 @@
                     android:id="@+id/dividerMarket"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_marginTop="@dimen/marginTop"
                     android:background="@android:color/darker_gray"
+                    android:layout_marginTop="@dimen/marginTop"
                     android:paddingBottom="@dimen/marginStart"
                     app:layout_constraintBottom_toBottomOf="@id/baseCardViewSurface"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -516,7 +536,9 @@
                     android:layout_marginTop="@dimen/marginTop"
                     android:text="@string/on_market_since"
                     android:paddingStart="@dimen/marginStart"
+                    android:paddingTop="@dimen/marginTop"
                     android:paddingEnd="@dimen/marginEnd"
+                    android:paddingBottom="@dimen/marginTop"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/dividerMarket" />
@@ -526,6 +548,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
+                    android:paddingStart="@dimen/marginStart"
+                    android:paddingTop="@dimen/marginTop"
+                    android:paddingEnd="@dimen/marginEnd"
+                    android:paddingBottom="@dimen/marginTop"
                     android:onClick="@{()->fragment.setExpandableListener(baseCardViewSellDate, arrowButtonSellDate )}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.802"
@@ -572,8 +598,8 @@
                     android:id="@+id/dividerSwitch"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_marginTop="@dimen/marginTop"
                     android:background="@android:color/darker_gray"
+                    android:layout_marginTop="@dimen/marginTop"
                     android:paddingBottom="@dimen/marginStart"
                     app:layout_constraintBottom_toBottomOf="@id/baseCardViewSellDate"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -582,10 +608,11 @@
                     android:id="@+id/switchSoldText"
                     style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                     android:layout_width="wrap_content"
-                    android:layout_height="22dp"
-                    android:layout_marginTop="22dp"
+                    android:layout_height="wrap_content"
                     android:paddingStart="@dimen/marginStart"
+                    android:paddingTop="@dimen/marginTop"
                     android:paddingEnd="@dimen/marginEnd"
+                    android:paddingBottom="@dimen/marginTop"
                     android:text="@string/sold"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
@@ -595,6 +622,10 @@
                     android:id="@+id/arrowButtonSoldSwitch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/marginStart"
+                    android:paddingTop="@dimen/marginTop"
+                    android:paddingEnd="@dimen/marginEnd"
+                    android:paddingBottom="@dimen/marginTop"
                     android:background="@color/white"
                     android:onClick="@{()->fragment.setExpandableListener(baseCardViewSoldSwitch, arrowButtonSoldSwitch )}"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -659,8 +690,8 @@
                     android:id="@+id/dividerCharacteristics"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_marginTop="@dimen/marginTop"
                     android:background="@android:color/darker_gray"
+                    android:layout_marginTop="@dimen/marginTop"
                     android:paddingBottom="@dimen/marginStart"
                     app:layout_constraintBottom_toBottomOf="@id/baseCardViewSoldSwitch"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -670,9 +701,10 @@
                     style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/marginTop"
                     android:paddingStart="@dimen/marginStart"
+                    android:paddingTop="@dimen/marginTop"
                     android:paddingEnd="@dimen/marginEnd"
+                    android:paddingBottom="@dimen/marginTop"
                     android:text="@string/characteristics"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
@@ -683,6 +715,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
+                    android:paddingStart="@dimen/marginStart"
+                    android:paddingTop="@dimen/marginTop"
+                    android:paddingEnd="@dimen/marginEnd"
+                    android:paddingBottom="@dimen/marginTop"
                     android:onClick="@{()->fragment.setExpandableListener(baseCardViewCharacteristics,arrowButtonCharacteristics )}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.802"
@@ -839,8 +875,8 @@
                     android:id="@+id/dividerReset"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_marginTop="@dimen/marginTop"
                     android:background="@android:color/darker_gray"
+                    android:layout_marginTop="@dimen/marginTop"
                     android:paddingBottom="@dimen/marginStart"
                     app:layout_constraintBottom_toBottomOf="@id/baseCardViewCharacteristics"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -851,6 +887,7 @@
                     android:layout_height="wrap_content"
                     android:onClick="@{()->viewModel.resetFilters()}"
                     android:text="@string/reset"
+                    android:layout_marginEnd="@dimen/marginStart"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/dividerReset" />
